my_mattermost/mattermost-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  labels:
    app: my-mattermost
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 8065
  selector:
    app: my-mattermost
    tier: frontend
  type: LoadBalancer
  # clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-deployment
  labels:
    app: my-mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-mattermost
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-mattermost
        tier: frontend
    spec:
      containers:
        - image: mattermost/mattermost-team-edition #mattermost/mattermost-team-edition
          name: mattermost
          ports:
            - containerPort: 8065
          volumeMounts:
            - name: mattermost-persistent-storage
              mountPath: /mattermost/data
            - name: mattermost-config-persistent-storage
              mountPath: /mattermost/config
      volumes:
        - name: mattermost-persistent-storage
          persistentVolumeClaim:
            claimName: mattermost-pv-claim
        - name: mattermost-config-persistent-storage
          persistentVolumeClaim:
            claimName: mattermost-config-pv-claim
