my_mattermost/postgresql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-postgresql-service
  labels:
    app: my-mattermost
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 5432
  selector:
    app: my-mattermost
    tier: postgresql
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-postgresql-deployment
  labels:
    app: my-mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-mattermost
      tier: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-mattermost
        tier: postgresql
    spec:
      containers:
        - image: postgres:latest
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-persistent-storage
          persistentVolumeClaim:
            claimName: postgresql-pv-claim
